fix: update z-index and positionion

--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,11 @@ main {
         margin-bottom: 3rem;
       }
 
+      .content {
+        position: relative;
+        z-index: 2;
+      }
+
       h5 {
         font-size: 2.4rem;
         font-weight: 200;
@@ -100,7 +105,8 @@ main {
 
     .border {
       position: absolute;
-      bottom: -181px;
+      bottom: -150px;
+      z-index: 1;
       left: 0;
       right: 0;
       width: 100vw;
